# src/common/enums/fuel-type.enum.ts
@@ -1,0 +1,6 @@
+export enum FuelType {
+  Gasoline = 'gasoline',
+  Diesel = 'diesel',
+  Electric = 'electric',
+  Hybrid = 'hybrid',
+}
