# src/common/enums/transmission-type.enum.ts
@@ -1,0 +1,4 @@
+export enum TransmissionType {
+  Automatic = 'automatic',
+  Manual = 'manual',
+}
