# src/common/enums/vehicle-type.enum.ts
@@ -1,0 +1,7 @@
+export enum VehicleType {
+  Sedan = 'sedan',
+  SUV = 'suv',
+  Hatchback = 'hatchback',
+  StationVagon = 'station vagon',
+  MPV = 'mpv',
+}
